fix: Revert stack > * inline-size and wrap steps__step content in center with margin-inline: initial; fix line length.

--- a/src/css/layout-primitives.css
+++ b/src/css/layout-primitives.css
@@ -246,7 +246,7 @@
 
 .stack > * {
   margin-block: 0;
-  max-inline-size: 100%;
+  inline-size: 100%;
 }
 
 .stack > * + * {
