--- a/src/stories/Organisms/Steps/Steps.css
+++ b/src/stories/Organisms/Steps/Steps.css
@@ -48,6 +48,10 @@
   color: var(--color-white);
 }
 
+.steps__step .center {
+  margin-inline: initial;
+}
+
 .step__label {
   margin-block-end: var(--s0);
 }
